Fixing wrapping form

--- a/styles/main.css
+++ b/styles/main.css
@@ -266,7 +266,7 @@ body {
     line-height: 24px;
   }
   .signup .content {
-    width: 380px;
+    width: 404px;
     margin: 0 auto;
   }
   .signup .email {
